
PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)

PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)

BUG FIXES

PIG-3906: ant site errors out (nielsbasjes via daijy)

PIG-4851: Null not padded when input has less fields than declared schema for some loader (rohini)

PIG-4850: Registered jars do not use submit replication (rdblue via cheolsoo)

PIG-4845: Parallel instantiation of classes in Tez cause tasks to fail (rohini)

PIG-4841: Inline-op with schema declaration fails with syntax error (knoguchi)

PIG-4832: Fix TestPrumeColumn NPE failure (kellyzly via daijy)

PIG-4833 TestBuiltin.testURIWithCurlyBrace in TEZ failing after PIG-4819 (knoguchi)

PIG-4819: RANDOM() udf can lead to missing or redundant records (knoguchi)

PIG-4816: Read a null scalar causing a Tez failure (daijy)

PIG-4818: Single quote inside comment in GENERATE is not being ignored (knoguchi)

PIG-4814: AvroStorage does not take namenode HA as part of schema file url (daijy)

PIG-4812: Register Groovy UDF with relative path does not work (daijy)

PIG-4806: UDFContext can be reset in the middle during Tez input and output initialization (rohini)

PIG-4808: PluckTuple overwrites regex if used more than once in the same script (eyal via daijy)

PIG-4801: Provide backward compatibility with mapreduce mapred.task settings (rohini)

PIG-4759: Fix Classresolution_1 e2e failure (rohini)

PIG-4800: EvalFunc.getCacheFiles() fails for different namenode (rohini)

PIG-4790: Join after union fail due to UnionOptimizer (rohini)

PIG-4686: Backend code should not call AvroStorageUtils.getPaths (mitdesai via rohini)

PIG-4795: Flushing ObjectOutputStream before calling toByteArray on the underlying ByteArrayOutputStream (emopers via daijy)
