@@ -107,6 +107,8 @@ PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)
 
 BUG FIXES
 
+PIG-4844: Tez AM runs out of memory when vertex has high number of outputs (rohini)
+
 PIG-3906: ant site errors out (nielsbasjes via daijy)
 
 PIG-4851: Null not padded when input has less fields than declared schema for some loader (rohini)
